{
    "name": "InputActions",
    "maps": [
        {
            "name": "ActionMaps",
            "id": "89318a0d-5fac-4bae-8a45-e1864cd3f3dc",
            "actions": [
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "052ac51d-9e48-42c0-8677-53b73711a6cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "76d3468f-5202-440f-aae7-29a8af6c07aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd8b9f90-f516-4e2b-bebe-4b0f0bfb15f8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8d17041-d353-475b-ab6a-6360b26079f4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}