{
    "name": "InputActions",
    "maps": [
        {
            "name": "ActionMaps",
            "id": "89318a0d-5fac-4bae-8a45-e1864cd3f3dc",
            "actions": [
                {
                    "name": "LeftMouseButton",
                    "type": "Button",
                    "id": "052ac51d-9e48-42c0-8677-53b73711a6cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouseButton",
                    "type": "Button",
                    "id": "76d3468f-5202-440f-aae7-29a8af6c07aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleMouseButton",
                    "type": "Button",
                    "id": "e621fafb-20ac-4e54-b9da-fd3865281073",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookMouseDelta",
                    "type": "Value",
                    "id": "5c59092f-4892-4e0a-9f46-0eef74f7ac1f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScrollMouse",
                    "type": "Value",
                    "id": "7627ea27-3582-448b-8e1d-a5e7a3405147",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd8b9f90-f516-4e2b-bebe-4b0f0bfb15f8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8d17041-d353-475b-ab6a-6360b26079f4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9a5c631-4c75-491d-a376-489d68bc1a7d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2",
                    "groups": "",
                    "action": "LookMouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7a69d33-9f55-4177-9fb4-1aed5f97e456",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0731ef01-32a8-48ff-ae81-69726013f1fd",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}